# ChangeLog for app-misc/lirc Copyright 2002-2004 Gentoo Technologies, Inc.;
# Distributed under the GPL v2 $Header:
# /home/cvsroot/gentoo-x86/app-misc/lirc/ChangeLog,v 1.21 2004/03/08 14:56:09
# lanius Exp $

  24 May 2004; Heinrich Wendel <lanius@gentoo.org> lirc-0.6.6-r1.ebuild,
  lirc-0.7.0_pre2.ebuild, lirc-0.7.0_pre3.ebuild, lirc-0.7.0_pre4.ebuild:
  fix GREP in global scope, bug #48382

  22 Apr 2004; Danny van Dyk <kugelfang@gentoo.org> lirc-0.7.0_pre4.ebuild:
  marked ~amd64. Someone forgot to mark ~amd64 on a version bump.

*lirc-0.7.0_pre4 (09 Apr 2004)

  09 Apr 2004; Heinrich Wendel <lanius@gentoo.org> lirc-0.7.0_pre4.ebuild:
  version bump, enable syslog logging, bug #47311

  14 Mar 2004; Heinrich Wendel <lanius@gentoo.org> lirc-0.7.0_pre3.ebuild:
  fix url to kernel 2.6 patch, remove irda warning, it's obsolete, bug #44395

*lirc-0.7.0_pre3 (08 Mar 2004)

  08 Mar 2004; Heinrich Wendel <lanius@gentoo.org> lirc-0.7.0_pre3.ebuild:
  version bump

  24 Feb 2004; Heinrich Wendel <lanius@gentoo.org> lirc-0.7.0_pre2.ebuild:
  stable on x86

  17 Feb 2004; Aron Griffis <agriffis@gentoo.org> lirc-0.7.0_pre2.ebuild:
  stable on alpha and ia64

  05 Feb 2004; Heinrich Wendel <lanius@gentoo.org> lirc-0.7.0_pre2.ebuild,
  files/lircd.conf:
  added /etc/conf.d/lircd

  19 Jan 2004; Heinrich Wendel <lanius@gentoo.org> lirc-0.7.0_pre2.ebuild,
  files/lirc-0.7.0_pre2-i2c.patch.gz:
  added patch to compile with i2c 2.8

  17 Jan 2004; Bartosch Pixa <darkspecter@gentoo.org> lirc-0.7.0_pre2.ebuild:
  set ppc in keywords

  14 Jan 2004; Brian Jackson <iggy@gentoo.org> lirc-0.6.6-r1.ebuild,
  lirc-0.7.0_pre2.ebuild, files/lircd:
  updated dates in ebuilds, added ${LIRCD_OPTS} to the start cmd line to
  pass extra options to the daemon

  29 Dec 2003; Sven Blumenstein <bazik@gentoo.org> lirc-0.6.6-r1.ebuild:
  Marked sparc to fix gxine depend.

  29 Dec 2003; Heinrich Wendel <lanius@gentoo.org> lirc-0.7.0_pre2.ebuild:
  finally fix kernel 2.6 support
