@@ -1,11 +1,12 @@
-MD5 f6d056f76acbfc8966325dc5c571e212 lirc-0.7.0_pre3.ebuild 4432
-MD5 2c2f3365b277357d65b59886773c4d4f lirc-0.6.6-r1.ebuild 3871
-MD5 edb2d8c93037c7546cdfd10f0016bcc9 lirc-0.7.0_pre4.ebuild 4472
-MD5 cc06c86cd9e0d4324e81fd824ae94ec4 ChangeLog 3786
+MD5 f7de127bcac975f52d4856d35e927b6a ChangeLog 3980
+MD5 2749663d6b3d343a46a03c1e66a09327 lirc-0.6.6-r1.ebuild 3883
+MD5 1652522405f5936eb29776ef8d5ffa5b metadata.xml 310
+MD5 4d386ec5d0dde5b5fa88b42c9c38c9fb lirc-0.7.0_pre3.ebuild 4444
+MD5 1a277f0a3034eef8c509e71603113d84 lirc-0.7.0_pre4.ebuild 4506
 MD5 eb1d5f40e0d59edbc1ac2a097cea5850 files/digest-lirc-0.6.6-r1 63
+MD5 6031968a1ddb51ff5265d1f22bd2d237 files/lirc-0.6.6-gentoo.diff.bz2 2215
 MD5 d0d865cbe48f328fb4cfb41e22d4407b files/lirc-0.7.0_pre2-i2c.patch.gz 705
 MD5 6be29381442461f310f47cb0552e6950 files/lircd 483
 MD5 ce31954d209c4e81861d7e3c76aaa91e files/lircd.conf 71
 MD5 cec75bc2acbedddba62b71993bf9981c files/digest-lirc-0.7.0_pre3 67
 MD5 03a0569271c2917b330754938b62cae7 files/digest-lirc-0.7.0_pre4 67
-MD5 6031968a1ddb51ff5265d1f22bd2d237 files/lirc-0.6.6-gentoo.diff.bz2 2215
