@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/lirc/lirc-0.6.6-r1.ebuild,v 1.8 2004/05/24 12:28:07 lanius Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/lirc/lirc-0.6.6-r1.ebuild,v 1.9 2004/06/07 07:05:45 dragonheart Exp $
 
 inherit eutils
 
@@ -43,6 +43,7 @@ HOMEPAGE="http://www.lirc.org"
 
 SLOT="0"
 LICENSE="GPL-2"
+IUSE=""
 KEYWORDS="x86 ~ppc amd64 sparc"
 
 DEPEND="virtual/linux-sources"
