@@ -1,5 +1,6 @@
 MD5 8ae81fb9ff08a38f7a6d9e5592044808 ChangeLog 595
 MD5 a14a75ba4c327d98908aced34710451c livetools-1.1.ebuild 1024
-MD5 8834fdd190ded14fa56ef2586a1b2125 livetools-1.2.3.ebuild 1024
+MD5 1652522405f5936eb29776ef8d5ffa5b metadata.xml 310
+MD5 e6d6cc1a70eb8fbd989a5df72f6e76d1 livetools-1.2.3.ebuild 1029
 MD5 4798e5f22ef14b03267f13a8156ccce5 files/digest-livetools-1.1 66
 MD5 7c5f46bd76ffbe5bb79328d5d1a158e9 files/digest-livetools-1.2.3 68
